<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_bg"
    android:padding="16dp">


    <!-- Back button -->
    <ImageButton
        android:id="@+id/backBtn"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@android:drawable/ic_media_previous"
        android:background="@null"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:tint="@color/white" />

    <!-- Title -->
    <TextView
        android:id="@+id/title"
        style="@style/TitleText"
        android:layout_width="328dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:gravity="center"
        android:text="Book Title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/backBtn"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/rectangle_border"/>


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:id="@+id/bookCover"
        android:layout_marginTop="56dp"
        android:background="@drawable/rectangle_border"
        android:contentDescription="book cover"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <LinearLayout
        android:id="@+id/tabs"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/bookCover"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp">

        <TextView
            android:id="@+id/tabAbout"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginEnd="10dp"
            android:text="@string/about_tab"
            android:textColor="@color/semi_transparent"
            android:background="@drawable/rectangle_border"/>

        <TextView
            android:id="@+id/tabSummary"
            style="@style/TitleText"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginEnd="10dp"
            android:text="@string/summary_tab"
            android:textColor="@color/white"
            android:background="@drawable/rectangle_border"/>

        <TextView
            android:id="@+id/tabChapters"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/chapters_tab"
            android:textColor="@color/semi_transparent"
            android:background="@drawable/rectangle_border"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/summaryBlock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="35dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tabs">
        <TextView
            android:id="@+id/summary_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle_border"
            android:gravity="center"
            android:text="summary of the book"
            android:textColor="@color/white" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>